changement des chemins des images

--- a/australie.html
+++ b/australie.html
@@ -17,7 +17,7 @@
         <article>
             <section class="flex-header">
                 <div class="img-header">
-                    <a href="index.html"><img id="logo" src="img/logo.png" alt="Logo"></a>
+                    <a><img id="logo" src="./images/logo.png" alt="Logo"></a>
                 </div>
                 <div class="title-header">
                     <h1>A vol d'oiseaux</h1>
@@ -68,7 +68,7 @@
                             </div>
                         </section>
                         <section class="australie1">
-                            <img class="img-australie1" src="images/drapeau.jpg" alt="drapeau australien">
+                            <img class="img-australie1" src="./images/australie/drapeau.jpg" alt="drapeau australien">
                             <div>
                                 <b><h3>Australie</h3></b>
                                 <p>L'Australie, est un pays d'Océanie, situé entre les océans Pacifique et Indien. Elle comprend l'île principale du continent australien, l'île de Tasmanie ainsi que de nombreuses petites îles. Avec une superficie de 7 741 200 km2, l'Australie est le plus grand pays d'Océanie et le sixième plus grand pays du monde.</p>
@@ -81,10 +81,10 @@
                                 <p>Bien que la majeure partie du pays soit désertique ou semi-aride, l’Australie (Tasmanie comprise) ne manque pas d’habitats naturels diversifiés pour accueillir différentes espèces animales et végétales. Pour une partie des animaux de ce continent, les scientifiques parlent de mégafaune australienne.</p>
                                 <p>Du fait du grand âge de ce territoire, de son climat très variable dans le temps et son isolation géographique très longue, une faune et une flore particulières ont pu se développer, en général d'origine très ancienne, tels que les oiseaux aptères (émeu), ou bien les mammifères monotrèmes (ovipares) et marsupiaux (à poche marsupiale ou marsupium), ayant précédé dans l'évolution les mammifères placentaires. </p>
                             </div>
-                            <img class="img-melbourne2" src="images/koala.webp" alt="quatre koala">
+                            <img class="img-melbourne2" src="./images/australie/koala.webp" alt="quatre koala">
                         </section>
                         <section class="australie1">
-                            <img class="img-melbourne1" src="images/climats.webp" alt="restaurant coda">
+                            <img class="img-melbourne1" src="./images/australie/climats.webp" alt="climats">
                             <div>
                                 <b><h3>Climats</h3></b>
                                 <p>Les côtes du nord et du nord-est ont un climat tropical. De décembre à avril, il fait très chaud (29 °C à Darwin, 26 °C à Cairns) et très humide avec des pluies tropicales d'été. Il pleut de 15 à 20 jours par mois. Ainsi, en décembre, il tombe 225 mm d'eau à Cairns et Darwin, en janvier et février de 300 à 400 mm, en mars 300 mm à Cairns et 450 mm à Darwin. À partir de mi-avril, les pluies deviennent plus rares et les températures descendent un peu, tout en restant élevées (26 °C de mai à septembre à Darwin, 22 °C à Cairns).</p>
@@ -107,7 +107,7 @@
                             <h2>Melbourne</h2>
                         </section>
                         <section class="melbourne1">
-                            <img class="img-melbourne1" src="images/botanic-garden.jpg" alt="jardin botanqique royal de melbourne">
+                            <img class="img-melbourne1" src="./images/australie/botanic-garden.jpg" alt="jardin botanqique royal de melbourne">
                             <div>
                                 <b><h3>Jardins Botaniques Royaux de Melbourne</h3></b>
                                 <p>Des roses, des palmiers, des cactus et 14 autres « collections » végétales vous attendent dans les jardins botaniques. En tout, on y trouve plus de 50 000 plantes et 12 000 espèces, ainsi qu’un véritable coin de forêt tropicale.</p>
@@ -120,10 +120,10 @@
                                 <p>Situé juste au nord du centre-ville, le quartier de Fitzroy constitue pour toute la scène alternative de Melbourne un véritable point de ralliement. Dans les boutiques des créateurs de mode locaux, les galeries d’art et les ateliers, la création artistique est ici omniprésente et s’affiche jusque sur les façades d’immeubles.</p>
                                 <p>Fitzroy est aussi un paradis pour les amateurs de vintage, qui trouveront forcément le vêtement délicieusement rétro ou le classique indémodable dont ils rêvent dans les friperies du quartier. </p>
                             </div>
-                            <img class="img-melbourne2" src="images/fitzroy.jpg" alt="quartier fitzroy">
+                            <img class="img-melbourne2" src="./images/australie/fitzroy.jpg" alt="quartier fitzroy">
                         </section>
                         <section class="melbourne1">
-                            <img class="img-melbourne1" src="images/coda.jpg" alt="restaurant coda">
+                            <img class="img-melbourne1" src="./images/australie/coda.jpg" alt="restaurant coda">
                             <div>
                                 <b><h3>Coda</h3></b>
                                 <p>D'origine italo-indienne, le propriétaire et chef cuisinier du Coda, Adam D'Sylva, s'inspire tout naturellement des deux traditions culinaires avec lesquelles il a grandi pour concocter des plats inédits, à l'image de son crabe au poivre noir frit au wok, de ses crevettes caramélisées au piment ou encore de sa salade de caille.</p>
@@ -147,7 +147,7 @@
                             <h2>Gold Coast</h2>
                         </section>
                         <section class="goldcoast1">
-                            <img class="img-goldcoast1" src="images/surfers-paradise.jpg" alt="gold coast plage et building">
+                            <img class="img-goldcoast1" src="./images/australie/surfers-paradise.jpg" alt="gold coast plage et building">
                             <div>
                                 <b><h3>Surfer's Paradise</h3></b>
                                 <p>Vous avez emporté votre maillot de bain ? S'étendant sur 57 kilomètres, le littoral de la Gold Coast offre certaines des meilleures vagues d'Australie pour le surf, ainsi que des criques calmes idéales pour la baignade et le paddle, le tout bordé de commerces et de restaurants animés. Cette ville du sud-est du Queensland compte également plus de 860 kilomètres de canaux et de rivières navigables. Certains regorgent de plages et d'autres sont idéaux pour une croisière d'exploration en bateau.</p>
@@ -161,10 +161,10 @@
                                 <p>Le sandwich Moreton Bay bug (une espèce de homard) au sriracha avec mayonnaise et salade est sans doute le plat le plus célèbre du restaurant, de quoi vous mettre l'eau à la bouche.</p>
                                 <p>Le menu change régulièrement (y compris la carte des boissons largement renommées), ce qui vous donne encore une excellente raison de redécouvrir encore et encore ce petit coin de paradis.</p>
                             </div>
-                            <img class="img-goldcoast2" src="images/rick-shores.jpg" alt="restaurant bord de mer">
+                            <img class="img-goldcoast2" src="./images/australie/rick-shores.jpg" alt="restaurant bord de mer">
                         </section>
                         <section class="goldcoast1">
-                            <img class="img-goldcoast1" src="images/skypoint.jpg" alt="tour skypoint">
+                            <img class="img-goldcoast1" src="./images/australie/skypoint.jpg" alt="tour skypoint">
                             <div>
                                 <b><h3>Skypoint</h3></b>
                                 <p>Vous avez toujours voulu visiter le sommet du plus haut bâtiment d'Australie ? La plate-forme d'observation SkyPoint offre une vue panoramique sur la Gold Coast, à 230 m au-dessus du niveau de la mer, située au sommet de l'emblématique bâtiment Q1 à Surfers Paradise. Le point de vue unique de SkyPoint vous permet d'admirer l'ensemble des toits de la ville à partir d'un seul endroit afin que vous puissiez savourer un délicieux repas ou un cocktail signature au plus haut Bistro+Bar de Gold Coast, situé au 77ème étage !  </p>
@@ -186,7 +186,7 @@
                             <h2>Sydney</h2>
                         </section>
                         <section class="sydney1">
-                            <img class="img-sydney1" src="images/sydney-opera.webp" alt="sydney opera">
+                            <img class="img-sydney1" src="./images/australie/sydney-opera.webp" alt="sydney opera">
                             <div>
                                 <b><h3>Opéra de Sydney</h3></b>
                                 <p>L’emblématique opéra de Sydney, avec ses voiles rugissantes, ses lignes épurées, ses courbes gracieuses et ses élégantes installations, est l’un des bâtiments les plus reconnaissables au monde. C’est un chef-d’œuvre architectural.</p>
@@ -199,10 +199,10 @@
                                 <p>Henry Deane, le joyau de la couronne de l'hôtel Palisade, révèle le charme moderne et sophistiqué du bâtiment. Réparti sur deux étages, le bar-salon contemporain offre une vue imprenable sur Sydney, quelle que soit la direction dans laquelle vous regardez.</p>
                                 <p>Le bar à cocktails s'étend sur les niveaux 4 et 5 de l'hôtel Palisade, et sert à la fois le déjeuner et le dîner, le menu créé et dirigé par le chef Cian Mulholland est conçu pour être partagé et complimente le port environnant. Venez pour la nourriture et les boissons, restez pour la vue imprenable sur le port.</p>
                             </div>
-                            <img class="img-sydney2" src="images/henry-deane.jpg" alt="intérieur bar harry deane">
+                            <img class="img-sydney2" src="./images/australie/henry-deane.jpg" alt="intérieur bar harry deane">
                         </section>
                         <section class="sydney1">
-                            <img class="img-sydney1" src="images/the-rocks.jpg" alt="quartier the rocks">
+                            <img class="img-sydney1" src="./images/australie/the-rocks.jpg" alt="quartier the rocks">
                             <div>
                                 <b><h3>The Rocks</h3></b>
                                 <p>Les premiers habitants du quartier The Rocks étaient des bagnards et des marins venus de la vieille Angleterre. Il s'agit du quartier le plus ancien de la ville. Ses rues pavées abritent plus de 100 sites et bâtiments patrimoniaux, notamment la plus vieille maison de Sydney, Camden Cottage, construite en 1816.</p>
@@ -244,51 +244,51 @@
                  <!-- heading text -->
                 <ul class="image-gallery">
                     <li>
-                        <img src="images/bibiothéques.jpg" alt="bibliotheques de melbourne" />
+                        <img src="./images/australie/bibiothéques.jpg" alt="bibliotheques de melbourne" />
                         <div class="overlay">Bibliothéques de Melbourne</div>
                     </li>
                     <li>
-                        <img class="image-gallery" src="images/jardin.jpg" alt="jardin botaniques royaux de sydney" />
+                        <img src="./images/australie/jardin.jpg" alt="jardin botaniques royaux de sydney" />
                         <div class="overlay">Jardins botaniques royaux de sydney</div>
                     </li>
                     <li>
-                        <img src="images//centre-commercial.jpg" alt="queen visctoria's building centre commercial" />
+                        <img src="./images/australie/centre-commercial.jpg" alt="queen visctoria's building centre commercial" />
                         <div class="overlay">Centre commercial Queen Victoria's building</div>
                     </li>
                     <li>
-                        <img src="images/plage.jpg" alt="plage de sable blanc" />
+                        <img src="./images/australie/plage.jpg" alt="plage de sable blanc" />
                         <div class="overlay">Jervis Bay</div>
                     </li>
                     <li>
-                        <img class="" src="images/rue.jpg" alt="nicholson street" />
+                        <img src="./images/australie/rue.jpg" alt="nicholson street" />
                         <div class="overlay">Nicholson street, Fitzroy</div>
                     </li>
                     <li>
-                        <img src="images/beachroad.jpg" alt="beach road" />
+                        <img src="./images/australie/beachroad.jpg" alt="beach road" />
                         <div class="overlay">Beach road Surfer's Paradise</div>
                     </li>
                     <li>
-                        <img src="images/operasydney.jpg" alt=" toit de l'opera de sydney" />
+                        <img src="./images/australie/operasydney.jpg" alt=" toit de l'opera de sydney" />
                         <div class="overlay">Toit de l'opéra de Sydney</div>
                     </li>
                     <li>
-                        <img src="images/bondibeach.jpg" alt="bbondi beach" />
+                        <img src="./images/australie/bondibeach.jpg" alt="bbondi beach" />
                         <div class="overlay">Bondi Beach</div>
                     </li>
                     <li>
-                        <img src="images/greatoceanroad.jpg" alt="falaise great ocean road" />
+                        <img src="./images/australie/greatoceanroad.jpg" alt="falaise great ocean road" />
                         <div class="overlay">Great ocean road</div>
                     </li>
                     <li>
-                        <img src="images/brisbane.jpg" alt="brisbane bridge of lights" />
+                        <img src="./images/australie/brisbane.jpg" alt="brisbane bridge of lights" />
                         <div class="overlay">Brisbane Bridge of Lights</div>
                     </li>
                     <li>
-                        <img src="images/roue.jpg" alt="brisbane grande roue" />
+                        <img src="./images/australie/roue.jpg" alt="brisbane grande roue" />
                         <div class="overlay">Wheel of Brisbane</div>
                     </li>
                     <li>
-                        <img src="images/queen_victoria_building.jpg" alt="batiment de la reine victoria" />
+                        <img src="./images/australie/queen_victoria_building.jpg" alt="batiment de la reine victoria" />
                         <div class="overlay">Queen Victoria building</div>
                     </li>
                 </ul>
