--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <article>
             <section class="flex-header">
                 <div class="img-header">
-                    <a href="index.html"><img id="logo" src="img/logo.png" alt="Logo"></a>
+                    <a><img id="logo" src="./images/logo.png" alt="Logo"></a>
                 </div>
                 <div class="title-header">
                     <h1>A vol d'oiseaux</h1>
@@ -28,11 +28,11 @@
             <ul class="menu">
                 <li><a href="">Continents</a>
                     <ul class="sous-menu">
-                        <li><a href="canada.html">Amérique du Nord</a></li>
+                        <li><a href="">Amérique du Nord</a></li>
                         <li><a href="">Afrique </a></li>
                         <li><a href="">Europe</a></li>
                         <li><a href="">Asie</a></li>
-                        <li><a href="australie.html">Océanie</a></li>
+                        <li><a href="">Océanie</a></li>
                     </ul>
                 </li>
 
