changement de chemins

--- a/japon.html
+++ b/japon.html
@@ -68,27 +68,27 @@
 
                     <div class="slide s1">
 
-                        <img src="image-japon/img-slide1.webp" alt="">
+                        <img src="images/japon/img-slide1.webp" alt="">
                     </div>
                     <div class="slide">
 
-                        <img src="image-japon//img-slide2.jpg" alt="">
+                        <img src="images/japon//img-slide2.jpg" alt="">
                     </div>
                     <div class="slide">
 
-                        <img src="image-japon//img-slide3.jpg" alt="">
+                        <img src="images/japon//img-slide3.jpg" alt="">
                     </div>
                     <div class="slide">
 
-                        <img src="image-japon//img-slide4.jpg" alt="">
+                        <img src="images/japon//img-slide4.jpg" alt="">
                     </div>
                     <div class="slide">
 
-                        <img src="image-japon//img-slide5.jpg" alt="">
+                        <img src="images/japon//img-slide5.jpg" alt="">
                     </div>
                     <div class="slide">
 
-                        <img src="image-japon//img-slide6.webp" alt="">
+                        <img src="images/japon//img-slide6.webp" alt="">
                     </div>
                 </div>
 
