--- a/corse.html
+++ b/corse.html
@@ -5,8 +5,8 @@
 <title>Corse</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link href="font-awesome.min.css" rel="stylesheet">
-<link href="map2.css" rel="stylesheet">
-<link href="corse.css" rel="stylesheet">
+<link href="css/map2.css" rel="stylesheet">
+<link href="css/corse.css" rel="stylesheet">
 <script src="jquery-3.6.0.min.js"></script>
 <script src="jquery.ui.effect.min.js"></script>
 <script src="popper.min.js"></script>
@@ -91,7 +91,7 @@ $(document).ready(function()
 <div class="ThemeableMenu1-navbar-collapse collapse">
 <ul class="nav navbar-nav">
 <li class="nav-item">
-<a href="./indexM.html" class="nav-link"><i class="fa fa-home"></i>Accueil</a>
+<a href="./index.html" class="nav-link"><i class="fa fa-home"></i>Accueil</a>
 </li>
 <li class="nav-item dropdown">
 <a href="#" class="dropdown-toggle" data-toggle="dropdown" ><i class="fa fa-globe"></i>Continent<b class="caret"></b></a>
@@ -159,10 +159,10 @@ $(document).ready(function()
 </ul>
 </li>
 <li class="nav-item">
-<a href="./indexM.html#about" class="nav-link">About</a>
+<a href="./index.html#about" class="nav-link">About</a>
 </li>
 <li class="nav-item">
-<a href="./indexM.html#contact" class="nav-link">Contact</a>
+<a href="./index.html#contact" class="nav-link">Contact</a>
 </li>
 </ul>
 </div>
@@ -411,19 +411,19 @@ $(document).ready(function()
 <span style="color:#FFFFFF;font-family:Arial;font-size:19px;"><strong>Nos réseaux sociaux</strong></span>
 </div>
 <div id="wb_FontAwesomeIcon1" style="display:inline-block;width:16px;height:16px;text-align:center;z-index:36;">
-<a href="./indexM.html"><div id="FontAwesomeIcon1"><i class="fa fa-facebook"></i></div></a>
+<a href="./index.html"><div id="FontAwesomeIcon1"><i class="fa fa-facebook"></i></div></a>
 </div>
 <div id="wb_FontAwesomeIcon2" style="display:inline-block;width:16px;height:16px;text-align:center;z-index:37;">
-<a href="./indexM.html"><div id="FontAwesomeIcon2"><i class="fa fa-twitter"></i></div></a>
+<a href="./index.html"><div id="FontAwesomeIcon2"><i class="fa fa-twitter"></i></div></a>
 </div>
 <div id="wb_FontAwesomeIcon3" style="display:inline-block;width:16px;height:16px;text-align:center;z-index:38;">
-<a href="./indexM.html"><div id="FontAwesomeIcon3"><i class="fa fa-pinterest"></i></div></a>
+<a href="./index.html"><div id="FontAwesomeIcon3"><i class="fa fa-pinterest"></i></div></a>
 </div>
 <div id="wb_FontAwesomeIcon4" style="display:inline-block;width:16px;height:16px;text-align:center;z-index:39;">
-<a href="./indexM.html"><div id="FontAwesomeIcon4"><i class="fa fa-instagram"></i></div></a>
+<a href="./index.html"><div id="FontAwesomeIcon4"><i class="fa fa-instagram"></i></div></a>
 </div>
 <div id="wb_FontAwesomeIcon5" style="display:inline-block;width:16px;height:16px;text-align:center;z-index:40;">
-<a href="./indexM.html"><div id="FontAwesomeIcon5"><i class="fa fa-youtube"></i></div></a>
+<a href="./index.html"><div id="FontAwesomeIcon5"><i class="fa fa-youtube"></i></div></a>
 </div>
 <div id="wb_indexText2">
 <span style="color:#FFFFFF;font-family:Arial;font-size:19px;"><strong>Contacts</strong></span>
