--- a/algerie.html
+++ b/algerie.html
@@ -47,19 +47,19 @@
         <main>
             <div class="image">
                 <div class="caroussel-image">
-                    <img src="images/p1.webp" alt>
-                    <img src="images/p2.jpg" alt>
-                    <img src="images/p3" alt>
-                    <img src="images/p4.jpg" alt>
-                    <img src="images/p5.jpg" alt>
-                    <img src="images/baghrir.webp" alt>
-                    <img src="images/harira.jpeg" alt>
-                    <img src="images/sidi-merouane.jpg" alt>
+                    <img src="images/algerie/p1.webp" alt>
+                    <img src="images/algerie/p2.jpg" alt>
+                    <img src="images/algerie/p3" alt>
+                    <img src="images/algerie/p4.jpg" alt>
+                    <img src="images/algerie/p5.jpg" alt>
+                    <img src="images/algerie/baghrir.webp" alt>
+                    <img src="images/algerie/harira.jpeg" alt>
+                    <img src="images/algerie/sidi-merouane.jpg" alt>
                 </div>
             </div>
             <div class="visite">
                 <div id="sahara" class="expli">
-                    <img src="images/sahara.jpg">
+                    <img src="images/algerie/sahara.jpg">
                     <div class="expli1">
                         <h2>Sahara</h2>
                         <p>Le Sahara couvre la majorité du territoire algérien. 
@@ -69,7 +69,7 @@
                     </div>
                 </div>
                 <div id="plage" class="expli">
-                    <img src="images/plage.jpg">
+                    <img src="images/algerie/plage.jpg">
                     <div class="expli1">
                         <h2>Plages</h2>
                         <p>Soleil enivrant, mer transparente et plages de rêve… l’Algérie vous séduira avec ses innombrables atouts ! 
@@ -79,7 +79,7 @@
                     </div>
                 </div>
                 <div id="montagne" class="expli">
-                    <img src="images/montagne.jpg">
+                    <img src="images/algerie/montagne.jpg">
                     <div class="expli1">
                         <h2>Montagnes</h2>
                         <p>Les montagnes, forêts et villages de la Kabylie et des Aurès sont à voir au printemps ou à l'automne, lorsque la végétation se pare de couleurs éclatantes. 
@@ -96,27 +96,27 @@
                     </div>
                     <div class="image_p">
                         <div class="image_p1">
-                            <img src="images/illizi.jpg">
+                            <img src="images/algerie/illizi.jpg">
                             <h3>Illizi</h3>
                         </div>
                         <div class="image_p1">
-                            <img src="images/tassili.jpg">
+                            <img src="images/algerie/tassili.jpg">
                             <h3>Tassili</h3>
                         </div>
                         <div class="image_p1">
-                            <img src="images/adrar.jpg">
+                            <img src="images/algerie/adrar.jpg">
                             <h3>Adrar</h3>
                         </div>
                         <div class="image_p1">
-                            <img src="images/hoggar.jpg">
+                            <img src="images/algerie/hoggar.jpg">
                             <h3>Hoggar</h3>
                         </div>
                         <div class="image_p1">
-                            <img src="images/timimoun.jpg">
+                            <img src="images/algerie/timimoun.jpg">
                             <h3>Timimoun</h3>
                         </div>
                         <div class="image_p1">
-                            <img src="images/tadrar.jpg">
+                            <img src="images/algerie/tadrar.jpg">
                             <h3>Tadrart</h3>
                         </div>
                     </div> 
@@ -130,23 +130,23 @@
                     </div>
                     <div class="image_p">
                         <div class="image_p1">
-                            <img src="images/elbeldj.jpg">
+                            <img src="images/algerie/elbeldj.jpg">
                             <h3>El Beldj</h3>
                         </div>
                         <div class="image_p1">
-                            <img src="images/sidi-merouane.jpg">
+                            <img src="images/algerie/sidi-merouane.jpg">
                             <h3>Sidi Merouane</h3>
                         </div>
                         <div class="image_p1">
-                            <img src="images/doumia.jpeg">
+                            <img src="images/algerie/doumia.jpeg">
                             <h3>Doumia</h3>
                         </div>
                         <div class="image_p1">
-                            <img src="images/guerbez.jpg">
+                            <img src="images/algerie/guerbez.jpg">
                             <h3>Guerbez</h3>
                         </div>
                         <div class="image_p1">
-                            <img src="images/les canadiennes.jpg">
+                            <img src="images/algerie/les canadiennes.jpg">
                             <h3>Les Canadiennes</h3>
                         </div>
                     </div> 
@@ -160,23 +160,23 @@
                     </div>
                     <div class="image_p">
                         <div class="image_p1">
-                            <img src="images/lalla-khedidja.jpg">
+                            <img src="images/algerie/lalla-khedidja.jpg">
                             <h3>Lalla Khedidja</h3>
                         </div>
                         <div class="image_p1">
-                            <img src="images/thaletat.JPG">
+                            <img src="images/algerie/thaletat.JPG">
                             <h3>Thaletat</h3>
                         </div>
                         <div class="image_p1">
-                            <img src="images/tamgout.jpg">
+                            <img src="images/algerie/tamgout.jpg">
                             <h3>Tamgout</h3>
                         </div>
                         <div class="image_p1">
-                            <img src="images/babor.jpg">
+                            <img src="images/algerie/babor.jpg">
                             <h3>Babor</h3>
                         </div>
                         <div class="image_p1">
-                            <img src="images/pic-des-singe.jpg">
+                            <img src="images/algerie/pic-des-singe.jpg">
                             <h3>Pic des singes</h3>
                         </div>
                     </div> 
@@ -184,66 +184,65 @@
                 </div>
             </div>
             <div class="title_food">
-                <div>
-                    <h2>Les plats traditionnels algériennes</h2>
-                </div>
+                <h2>Les plats traditionnels algériennes</h2>
             </div>
             <div class="container">
                 <div class="frame">
-                    <img src="images/couscous.jpg">
+                    <img src="images/algerie/couscous.jpg">
                     <div class="details">
                         <h3>Couscous</h3>
                     </div>
                 </div>
                 <div class="frame">
-                    <img src="images/harira.jpeg">
+                    <img src="images/algerie/harira.jpeg">
                     <div class="details">
                         <h3>Harira</h3>
                     </div>
                 </div>
                 <div class="frame">
-                    <img src="images/zitoun.webp">
+                    <img src="images/algerie/zitoun.webp">
                     <div class="details">
                         <h3>Zitoun</h3>
                     </div>
                 </div>
                 <div class="frame">
-                    <img src="images/mhajeb.jpg">
+                    <img src="images/algerie/mhajeb.jpg">
                     <div class="details">
                         <h3>Mhajeb</h3>
                     </div>
                 </div>
                 <div class="frame">
-                    <img src="images/hlow.jpg">
+                    <img src="images/algerie/hlow.jpg">
                     <div class="details">
                         <h3>Hlow</h3>
                     </div>
                 </div>
                 <div class="frame">
-                    <img src="images/baghrir.webp">
+                    <img src="images/algerie/baghrir.webp">
                     <div class="details">
                         <h3>Baghrir</h3>
                     </div>
                 </div>
                 <div class="frame">
-                    <img src="images/gateau.jpg">
+                    <img src="images/algerie/gateau.jpg">
                     <div class="details">
                         <h3>Gateaux Orientales</h3>
                     </div>
                 </div>
                 <div class="frame">
-                    <img src="images/mtewem.jpg">
+                    <img src="images/algerie/mtewem.jpg">
                     <div class="details">
                         <h3>Mtewem</h3>
                     </div>
                 </div>
-            </div>	
+            </div>
+            
         </main>
         <footer>
             <div class="container1 bottom_border">
                 <div class="row">
                     <div class="column" id="logo">
-                        <img src="images/logo_voyage.png">
+                        <img src="images/algerie/logo_voyage.png">
                     </div>
                     <div class=" column">
                         <h5 class="contact2">Contactez Nous</h5>
