--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         <div class="container top_border">
             <ul class="footer_fin">
                 <li><a href="">acceuil</a></li>
-                <li><a href="">Pays1</a></li>
+                <li><a href="">Japan</a></li>
                 <li><a href="">Pays2</a></li>
                 <li><a href="">Pays3</a></li>
                 <li><a href="">Pays4</a></li>
