--- a/australie.html
+++ b/australie.html
@@ -28,25 +28,25 @@
             <ul class="menu">
                 <li><a href="">Continents</a>
                     <ul class="sous-menu">
-                        <li><a href="">Amérique du Nord</a></li>
-                        <li><a href="">Afrique </a></li>
-                        <li><a href="">Europe</a></li>
-                        <li><a href="">Asie</a></li>
-                        <li><a href="">Océanie</a></li>
+                        <li><a href="canada.html">Amérique du Nord</a></li>
+                        <li><a href="algerie.html">Afrique </a></li>
+                        <li><a href="corse.html">Europe</a></li>
+                        <li><a href="japon.html">Asie</a></li>
+                        <li><a href="australie.html">Océanie</a></li>
                     </ul>
                 </li>
 
                 <li><a href="">Guides</a>
                     <ul class="sous-menu">
-                        <li><a href="">Léa</a></li>
+                        <li><a href="japon.html">Léa</a></li>
                             
-                        <li><a href="">Khouloud</a></li>
+                        <li><a href="algerie.html">Khouloud</a></li>
                             
-                        <li><a href="">Mourad</a></li>
+                        <li><a href="corse.html">Mourad</a></li>
 
-                        <li><a href="">Corentin</a></li>
+                        <li><a href="australie.html">Corentin</a></li>
 
-                        <li><a href="">Fabien</a></li>
+                        <li><a href="canada.html">Fabien</a></li>
                     </ul>
                 </li>
 
@@ -320,12 +320,12 @@
             </div>
         <div class="container top_border">
             <ul class="footer_fin">
-                <li><a href="">acceuil</a></li>
-                <li><a href="">Pays1</a></li>
-                <li><a href="">Pays2</a></li>
-                <li><a href="">Pays3</a></li>
-                <li><a href="">Pays4</a></li>
-                <li><a href="">Pays5</a></li>
+                <li><a href="index.html">acceuil</a></li>
+                <li><a href="canada.html">Amérique du Nord</a></li>
+                <li><a href="algerie.html">Afrique </a></li>
+                <li><a href="corse.html">Europe</a></li>
+                <li><a href="japon.html">Asie</a></li>
+                <li><a href="australie.html">Océanie</a></li>
             </ul>
             <ul class="social_media">
                 <li><a href=""><i class="fab fa-facebook-f"></i></a></li>
