modif logo footer japon

--- a/canada.html
+++ b/canada.html
@@ -15,14 +15,6 @@
 
 <body>
     <header>
-        <article>
-            <section class="flex-header">
-                <div class="title-header">
-                    <img id="logo" src="images/logo.png" alt="Logo">
-                    <h1>A vol d'oiseaux</h1>
-                </div>
-            </section>
-        </article>
         <nav>
             <ul class="menu">
                 <li><a href="">Continents</a>
@@ -223,7 +215,7 @@
         <div class="container">
             <div class="row">
                 <div class="column" id="logo">
-                    <img src="images/logo_voyage.png">
+                    <img src="./images/logo-voyage.png">
                 </div>
                 <div class=" column">
                     <h5 class="contact2">Contactez Nous</h5>
