--- a/japon.html
+++ b/japon.html
@@ -153,7 +153,7 @@
             <div class="container bottom_border">
                 <div class="row">
                     <div class="column" id="logo">
-                        <img src="images/logo_voyage.png">
+                        <img src="./images/logo-voyage.png">
                     </div>
                     <div class=" column">
                         <h5 class="contact2">Contactez Nous</h5>
