--- a/algerie.html
+++ b/algerie.html
@@ -242,7 +242,7 @@
             <div class="container1 bottom_border">
                 <div class="row">
                     <div class="column" id="logo">
-                        <img src="images/algerie/logo_voyage.png">
+                        <img src="/images/logo-voyage.png">
                     </div>
                     <div class=" column">
                         <h5 class="contact2">Contactez Nous</h5>
