--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
         <article>
             <section class="flex-header">
                 <div class="img-header">
-                    <a href="index.html"><img id="logo" src="img/logo.png" alt="Logo"></a>
+                    <a href="index.html"><img id="logo" src="./images/logo.png" alt="Logo"></a>
                 </div>
                 <div class="title-header">
                     <h1>A vol d'oiseaux</h1>
