--- a/canada.html
+++ b/canada.html
@@ -15,6 +15,9 @@
 
 <body>
     <header>
+        <div id="canada-header">
+            <h1>Welcome <br>to <br>Canada</h1>
+        </div>
         <nav>
             <ul class="menu">
                 <li><a href="">Continents</a>
