changement royaume-uni en algérie

--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
 
         <section class="resume-pays">
 
-            <div class="royaume-uni">
+            <div class="algerie">
 
-                <img src="images/resume/royaume-uni3.jpg" alt="une vue plongeante sur Londres">
-                <p>Le Royaume Uni regroupe quatre pays et autant de voyages différents à prévoir. Non, cet état ne se définit pas seulement à l’Angleterre comme on peut souvent en faire l’amalgame mais bien à une multitude de paysages et de cultures à part. Outre-Manche, vous apprécierez l’osmose que l’on retrouve entre les villes britanniques, le climat doux bien que peu ensoleillé, et les plaines verdoyantes des contrées. C’est l’occasion d’aller voir plus loin que la Big Ben de Londres, et enfin visiter l’Écosse, le Pays de Galles, l’Irlande du Nord, et les terres et les autres villes de l’Angleterre. Bien que la capitale soit un bonheur pour chaque voyageur, vous lirez ci-dessous que chacun des pays mérite qu’on s’y attarde bien plus qu’un simple weekend.</p>
+                <img src="images/resume/algerie3.webp" alt="une vue plongeante sur Londres">
+                <p>Située en plein coeur du Maghreb, l'Algérie est une destination de choix pour tous ceux et toutes celles qui sont en quête d'évasion et de nouveauté. Car oui, entre les dunes du Sahara, la Grande mosquée, ou la chaleur des Berbères, l'Algérie est un pays riche de culture, et de belles découvertes !</p>
             </div>
 
             <div class="japon">
