--- a/corse.html
+++ b/corse.html
@@ -11,6 +11,7 @@
 <link href="font-awesome.min.css" rel="stylesheet">
 <link href="css/map2.css" rel="stylesheet">
 <link href="css/corse.css" rel="stylesheet">
+<link rel="icon" href="/images/logo.png">
 <script src="jquery-3.6.0.min.js"></script>
 <script src="jquery.ui.effect.min.js"></script>
 <script src="popper.min.js"></script>
