--- a/algerie.html
+++ b/algerie.html
@@ -10,6 +10,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@1,300&family=Lora:ital,wght@1,600&family=Martel&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="css/algerie.css">
         <link rel="stylesheet" href="css/voyages.css">
+        <link rel="icon" href="/images/logo.png">
         <title>Algérie</title>
     </head>
     <body >
