ajout picheader australie

--- a/australie.html
+++ b/australie.html
@@ -15,13 +15,7 @@
 <body>
     <header>
         <article>
-            <section class="flex-header">
-                <div class="img-header">
-                    <a><img id="logo" src="./images/logo.png" alt="Logo"></a>
-                </div>
-                <div class="title-header">
-                    <h1>A vol d'oiseaux</h1>
-                </div>
+            <section class="header-australie">
             </section>
         </article>
         <nav>
