modification de tout (merci Khouloud...)
.

--- a/contact.html
+++ b/contact.html
@@ -17,9 +17,6 @@
     <header>
         <article>
             <section class="flex-header">
-                <div class="img-header">
-                    <a href="index.html"><img id="logo" src="img/logo.png" alt="Logo"></a>
-                </div>
                 <div class="title-header">
                     <h1>A vol d'oiseaux</h1>
                 </div>
@@ -79,7 +76,7 @@
                 <label for="commentaires">Commentaires</label>
                 <textarea class="form-separate" name="commentaires" id="commentaires" cols="50" rows="10"></textarea>
 
-                <input class="form-separate" type="submit" value="Envoyer">
+                <input id="submit" class="form-separate" type="submit" value="Envoyer">
             </form>
         </article>
     </main>
@@ -88,7 +85,7 @@
         <div class="container">
             <div class="row">
                 <div class="column" id="logo">
-                    <img src="logo_voyage.png">
+                    <img src="images/logo-voyage.png">
                 </div>
                 <div class=" column">
                     <h5 class="contact2">Contactez Nous</h5>
