--- a/index.html
+++ b/index.html
@@ -17,9 +17,6 @@
     <header>
         <article>
             <section class="flex-header">
-                <div class="img-header">
-                    <a><img id="logo" src="./images/logo.png" alt="Logo"></a>
-                </div>
                 <div class="title-header">
                     <h1>A vol d'oiseaux</h1>
                 </div>
@@ -58,15 +55,16 @@
     
     <main>
 	
-	<img src="images/corse/world-physical-map.jpg" id="ImageHotspots1" alt="World map" usemap="#ImageHotspots1-map" title="Vol au dessus de la Terre" width="1200" height="778">
-<map name="ImageHotspots1-map">
-<area shape="rect" id="ImageHotspots1-hotspot-0" coords="92,187,320,353" data-bounds="77,240,190,213" href="canada.html" target="" alt="" data-title="">
-<area shape="rect" id="ImageHotspots1-hotspot-1" coords="552,424,593,464" data-bounds="460,545,34,51" href="algerie.html" target="" alt="ALGERIE" data-title="ALGERIE">
-<area shape="rect" id="ImageHotspots1-hotspot-2" coords="582,377,612,407" data-bounds="485,485,25,38" href="corse.html" target="" alt="CORSE" data-title="CORSE">
-<area shape="rect" id="ImageHotspots1-hotspot-3" coords="936,576,1081,687" data-bounds="780,740,121,143" href="australie.html" target="" alt="AUSTRALIE" data-title="AUSTRALIE">
-<area shape="rect" id="ImageHotspots1-hotspot-4" coords="998,382,1046,433" data-bounds="832,491,40,66" href="japon.html" target="" alt="JAPON" data-title="JAPON">
-</map>
-<div id="ImageHotspots1-tooltip" style="position:absolute;left:0;top:0;width:16px;height:16px;pointer-events:none"></div>
+        <!-- <img src="images/corse/world-physical-map.jpg" id="ImageHotspots1" alt="World map" usemap="#ImageHotspots1-map" title="Vol au dessus de la Terre" width="1200" height="778">
+        <map name="ImageHotspots1-map">
+        <area shape="rect" id="ImageHotspots1-hotspot-0" coords="92,187,320,353" data-bounds="77,240,190,213" href="canada.html" target="" alt="" data-title="">
+        <area shape="rect" id="ImageHotspots1-hotspot-1" coords="552,424,593,464" data-bounds="460,545,34,51" href="algerie.html" target="" alt="ALGERIE" data-title="ALGERIE">
+        <area shape="rect" id="ImageHotspots1-hotspot-2" coords="582,377,612,407" data-bounds="485,485,25,38" href="corse.html" target="" alt="CORSE" data-title="CORSE">
+        <area shape="rect" id="ImageHotspots1-hotspot-3" coords="936,576,1081,687" data-bounds="780,740,121,143" href="australie.html" target="" alt="AUSTRALIE" data-title="AUSTRALIE">
+        <area shape="rect" id="ImageHotspots1-hotspot-4" coords="998,382,1046,433" data-bounds="832,491,40,66" href="japon.html" target="" alt="JAPON" data-title="JAPON">
+        </map>
+        <div id="ImageHotspots1-tooltip" style="position:absolute;left:0;top:0;width:16px;height:16px;pointer-events:none"></div> -->
+
         <section class="resume-pays">
 
             <div class="royaume-uni">
