--- a/algerie.html
+++ b/algerie.html
@@ -17,6 +17,7 @@
         <header class="">
             <nav>
                 <ul class="menu">
+                    <li><a href="index.html">Accueil</a></li>
                     <li><a href="">Continents</a>
                         <ul class="sous-menu">
                             <li><a href="canada.html">Amérique du Nord</a></li>
