--- a/contact.html
+++ b/contact.html
@@ -24,6 +24,7 @@
         </article>
         <nav>
             <ul class="menu">
+                <li><a href="index.html">Accueil</a></li>
                 <li><a href="">Continents</a>
                     <ul class="sous-menu">
                         <li><a href="canada.html">Amérique du Nord</a></li>
