--- a/japon.html
+++ b/japon.html
@@ -26,6 +26,7 @@
         <header>
             <nav>
                 <ul class="menu">
+                    <li><a href="index.html">Accueil</a></li>
                     <li><a href="">Continents</a>
                         <ul class="sous-menu">
                             <li><a href="canada.html">Amérique du Nord</a></li>
