finition du site

--- a/australie.html
+++ b/australie.html
@@ -84,7 +84,7 @@
                             <img class="img-melbourne2" src="./images/australie/koala.webp" alt="quatre koala">
                         </section>
                         <section class="australie1">
-                            <img class="img-melbourne1" src="./images/australie/climats.webp" alt="climats">
+                            <img class="img-australie1" src="./images/australie/climats.webp" alt="climats">
                             <div>
                                 <b><h3>Climats</h3></b>
                                 <p>Les côtes du nord et du nord-est ont un climat tropical. De décembre à avril, il fait très chaud (29 °C à Darwin, 26 °C à Cairns) et très humide avec des pluies tropicales d'été. Il pleut de 15 à 20 jours par mois. Ainsi, en décembre, il tombe 225 mm d'eau à Cairns et Darwin, en janvier et février de 300 à 400 mm, en mars 300 mm à Cairns et 450 mm à Darwin. À partir de mi-avril, les pluies deviennent plus rares et les températures descendent un peu, tout en restant élevées (26 °C de mai à septembre à Darwin, 22 °C à Cairns).</p>
