avec plaisir fabien

--- a/algerie.html
+++ b/algerie.html
@@ -241,7 +241,7 @@
             
         </main>
         <footer>
-            <div class="container1 bottom_border">
+            <div class="container1 top_border">
                 <div class="row">
                     <div class="column" id="logo">
                         <img src="/images/logo-voyage.png">
