résolutions problémes page australie

--- a/australie.html
+++ b/australie.html
@@ -77,10 +77,10 @@
                                 <p>Bien que la majeure partie du pays soit désertique ou semi-aride, l’Australie (Tasmanie comprise) ne manque pas d’habitats naturels diversifiés pour accueillir différentes espèces animales et végétales. Pour une partie des animaux de ce continent, les scientifiques parlent de mégafaune australienne.</p>
                                 <p>Du fait du grand âge de ce territoire, de son climat très variable dans le temps et son isolation géographique très longue, une faune et une flore particulières ont pu se développer, en général d'origine très ancienne, tels que les oiseaux aptères (émeu), ou bien les mammifères monotrèmes (ovipares) et marsupiaux (à poche marsupiale ou marsupium), ayant précédé dans l'évolution les mammifères placentaires. </p>
                             </div>
-                            <img class="img-melbourne2" src="./images/australie/koala.webp" alt="quatre koala">
+                            <img class="img-australie2" src="./images/australie/koala.webp" alt="quatre koala">
                         </section>
                         <section class="australie1">
-                            <img class="img-melbourne1" src="./images/australie/climats.webp" alt="climats">
+                            <img class="img-australie1" src="./images/australie/climats.webp" alt="climats">
                             <div>
                                 <b><h3>Climats</h3></b>
                                 <p>Les côtes du nord et du nord-est ont un climat tropical. De décembre à avril, il fait très chaud (29 °C à Darwin, 26 °C à Cairns) et très humide avec des pluies tropicales d'été. Il pleut de 15 à 20 jours par mois. Ainsi, en décembre, il tombe 225 mm d'eau à Cairns et Darwin, en janvier et février de 300 à 400 mm, en mars 300 mm à Cairns et 450 mm à Darwin. À partir de mi-avril, les pluies deviennent plus rares et les températures descendent un peu, tout en restant élevées (26 °C de mai à septembre à Darwin, 22 °C à Cairns).</p>
@@ -295,7 +295,7 @@
         <div class="container">
             <div class="row">
                 <div class="column" id="logo">
-                    <img src="logo_voyage.png">
+                    <img src="./images/logo-voyage.png">
                 </div>
                 <div class=" column">
                     <h5 class="contact2">Contactez Nous</h5>
