--- a/algerie.html
+++ b/algerie.html
@@ -188,7 +188,7 @@
             <div class="title_food">
                 <h2>Les plats traditionnels algériennes</h2>
             </div>
-            <div class="container">
+            <div class="container1">
                 <div class="frame">
                     <img src="images/algerie/couscous.jpg">
                     <div class="details">
@@ -241,10 +241,10 @@
             
         </main>
         <footer>
-            <div class="container1 top_border">
+            <div class="container">
                 <div class="row">
                     <div class="column" id="logo">
-                        <img src="/images/logo-voyage.png">
+                        <img src="images/logo-voyage.png">
                     </div>
                     <div class=" column">
                         <h5 class="contact2">Contactez Nous</h5>
@@ -263,8 +263,7 @@
                         </ul>
                     </div>
                 </div>
-            </div>
-            <div class="container1">
+            <div class="container top_border">
                 <ul class="footer_fin">
                     <li><a href="index.html">acceuil</a></li>
                     <li><a href="canada.html">Amérique du Nord</a></li>
@@ -280,6 +279,6 @@
                     <li><a href=""><i class="fab fa-instagram"></i></a></li>
                 </ul>
             </div>                   
-        </footer>
+        </footer>   
     </body>
 </html>
